--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -23,19 +23,17 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center_vertical"
-        android:padding="8dp"
+        android:padding="4dp"
         app:layout_constraintTop_toTopOf="@id/topAppBar"
         app:layout_constraintBottom_toBottomOf="@id/topAppBar"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
-        <ImageView
-            android:id="@+id/logo"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:src="@drawable/logoseminario"
-            android:adjustViewBounds="true"
-            android:contentDescription="@string/logo"/>
+    <ImageView
+        android:id="@+id/logo"
+        android:layout_width="40dp"  android:layout_height="40dp" android:src="@drawable/logoseminario"
+        android:adjustViewBounds="true"
+        android:contentDescription="@string/logo"/>
 
         <androidx.appcompat.widget.SearchView
             android:id="@+id/searchView"
