--- a/app/src/main/res/layout/item_filter_chip.xml
+++ b/app/src/main/res/layout/item_filter_chip.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.chip.Chip xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/chipOrderName"
     style="@style/Widget.MaterialComponents.Chip.Choice"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:checkable="true"
-    android:text="Chip dinámico" />
+    app:chipBackgroundColor="@color/button"
+    app:strokeWidth="2dp"
+    app:strokeColor="@color/Border"
+    android:checkable="true" />
 
