--- a/app/src/main/res/layout/item_game.xml
+++ b/app/src/main/res/layout/item_game.xml
@@ -2,14 +2,21 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+
+    android:layout_marginStart="6dp"
+    android:layout_marginEnd="6dp"
     android:layout_marginBottom="12dp"
+
     android:elevation="4dp"
-    android:padding="8dp">
+    android:padding="0dp">
 
     <LinearLayout
+        android:background="@color/button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:paddingBottom="8dp">
 
         <ImageView
             android:id="@+id/gameImage"
@@ -24,6 +31,9 @@
             android:layout_height="wrap_content"
             android:textSize="18sp"
             android:textStyle="bold"
+            android:textColor="@color/text_color_primary"
+            android:paddingStart="8dp"
+            android:paddingEnd="8dp"
             android:paddingTop="8dp" />
 
         <TextView
@@ -31,7 +41,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="14sp"
-            android:textColor="#666666"
+            android:textColor="@color/informationSecondary"
+            android:paddingStart="8dp"
+            android:paddingEnd="8dp"
             android:paddingTop="4dp" />
+
     </LinearLayout>
 </androidx.cardview.widget.CardView>
